--- a/CPPIntermediate/CPPIntermediate.vcxproj
+++ b/CPPIntermediate/CPPIntermediate.vcxproj
@@ -172,7 +172,17 @@
     <ClCompile Include="Section01\Trivial\trivial1.cpp" />
     <ClCompile Include="Section01\Trivial\trivial_copy1.cpp" />
     <ClCompile Include="Section01\Trivial\trivial_copy2.cpp" />
-    <ClCompile Include="Section01\TypeDeduction\type_deduction1.cpp" />
+    <ClCompile Include="Section01\TypeDeduction1\auto_type_deduction1.cpp" />
+    <ClCompile Include="Section01\TypeDeduction1\auto_type_deduction2.cpp" />
+    <ClCompile Include="Section01\TypeDeduction1\template_type_deduction1.cpp" />
+    <ClCompile Include="Section01\TypeDeduction1\template_type_deduction2.cpp" />
+    <ClCompile Include="Section01\TypeDeduction1\template_type_deduction3.cpp" />
+    <ClCompile Include="Section01\TypeDeduction1\template_type_deduction4.cpp" />
+    <ClCompile Include="Section01\TypeDeduction1\type_deduction1.cpp" />
+    <ClCompile Include="Section01\TypeDeduction1\type_deduction2.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Section01\TypeDeduction1\cppmaster.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
