함수 객체에 대해서 설명하고, 함수 객체가 왜 상태를 저장할 수 있는지 설명함. 람다에 대해 설명하며 람다가 함수객체를 만드는 것이라는 것과 내부에 inline 속성을 가지고 있다고 설명함

--- a/CPPIntermediate/CPPIntermediate.vcxproj
+++ b/CPPIntermediate/CPPIntermediate.vcxproj
@@ -222,6 +222,26 @@
     <ClCompile Include="Section03\chronometry8.cpp" />
     <ClCompile Include="Section03\using_chronometry1.cpp" />
     <ClCompile Include="Section03\using_chronometry2.cpp" />
+    <ClCompile Include="Section04\FunctionObject\function_object1.cpp" />
+    <ClCompile Include="Section04\FunctionObject\function_object2.cpp" />
+    <ClCompile Include="Section04\FunctionObject\function_state1.cpp" />
+    <ClCompile Include="Section04\FunctionObject\function_state2.cpp" />
+    <ClCompile Include="Section04\FunctionObject\function_state3.cpp" />
+    <ClCompile Include="Section04\FunctionObject\functor_closure1.cpp" />
+    <ClCompile Include="Section04\FunctionObject\functor_closure2.cpp" />
+    <ClCompile Include="Section04\FunctionObject\functor_inline1.cpp" />
+    <ClCompile Include="Section04\FunctionObject\functor_inline2.cpp" />
+    <ClCompile Include="Section04\FunctionObject\functor_inline3.cpp" />
+    <ClCompile Include="Section04\FunctionObject\functor_inline4.cpp" />
+    <ClCompile Include="Section04\FunctionObject\functor_inline5.cpp" />
+    <ClCompile Include="Section04\LambdaExpression1\closure1.cpp" />
+    <ClCompile Include="Section04\LambdaExpression1\closure2.cpp" />
+    <ClCompile Include="Section04\LambdaExpression1\closure_capture1.cpp" />
+    <ClCompile Include="Section04\LambdaExpression1\closure_capture2.cpp" />
+    <ClCompile Include="Section04\LambdaExpression1\closure_capture3.cpp" />
+    <ClCompile Include="Section04\LambdaExpression1\lambda_basic1.cpp" />
+    <ClCompile Include="Section04\LambdaExpression1\lambda_basic2.cpp" />
+    <ClCompile Include="Section04\LambdaExpression1\lambda_basic3.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Section01\TypeDeduction1\cppmaster.h" />
