--- a/CPPTemplate/CPPTemplate.vcxproj
+++ b/CPPTemplate/CPPTemplate.vcxproj
@@ -105,10 +105,12 @@
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp20</LanguageStandard>
+      <AdditionalIncludeDirectories>C:\Users\RING_0722\Downloads\boost_1_80_0\boost_1_80_0;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalLibraryDirectories>C:\Users\RING_0722\Downloads\boost_1_80_0\boost_1_80_0\stage\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -120,15 +122,22 @@
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpp20</LanguageStandard>
+      <AdditionalIncludeDirectories>C:\Users\RING_0722\Downloads\boost_1_80_0\boost_1_80_0;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalLibraryDirectories>C:\Users\RING_0722\Downloads\boost_1_80_0\boost_1_80_0\stage\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Section01\TemplateBasic\argument_decay.cpp" />
+    <ClCompile Include="Section01\TemplateBasic\argument_decay2.cpp" />
+    <ClCompile Include="Section01\TemplateBasic\array_name.cpp" />
+    <ClCompile Include="Section01\TemplateBasic\boost_type.cpp" />
+    <ClCompile Include="Section01\TemplateBasic\boost_type2.cpp" />
     <ClCompile Include="Section01\TemplateBasic\function_lazy.cpp" />
     <ClCompile Include="Section01\TemplateBasic\function_template.cpp" />
     <ClCompile Include="Section01\TemplateBasic\identity_check.cpp" />
@@ -137,6 +146,9 @@
     <ClCompile Include="Section01\TemplateBasic\Lib.cpp" />
     <ClCompile Include="Section01\TemplateBasic\main.cpp" />
     <ClCompile Include="Section01\TemplateBasic\make_template.cpp" />
+    <ClCompile Include="Section01\TemplateBasic\template_foo.cpp" />
+    <ClCompile Include="Section01\TemplateBasic\template_foo2.cpp" />
+    <ClCompile Include="Section01\TemplateBasic\template_foo3.cpp" />
     <ClCompile Include="Section01\TemplateBasic\userdefinededuction.cpp" />
   </ItemGroup>
   <ItemGroup>
