friend 는 일반 함수가 클래스 안 멤버함수를 사용할 수 없으므로 붙이는 키워드이다.

--- a/CPPTemplate/CPPTemplate.vcxproj
+++ b/CPPTemplate/CPPTemplate.vcxproj
@@ -152,6 +152,14 @@
     <ClCompile Include="Section01\TemplateBasic\template_foo3.cpp" />
     <ClCompile Include="Section01\TemplateBasic\userdefinededuction.cpp" />
     <ClCompile Include="Section02\GenericCopyCotr\template_basic.cpp" />
+    <ClCompile Include="Section02\GenericCopyCotr\template_basic2.cpp" />
+    <ClCompile Include="Section02\GenericCopyCotr\template_memberfunc.cpp" />
+    <ClCompile Include="Section02\GenericCopyCotr\template_memberfunc2.cpp" />
+    <ClCompile Include="Section02\GenericCopyCotr\template_memberfunc3.cpp" />
+    <ClCompile Include="Section02\TemplateFriend\template_friend1.cpp" />
+    <ClCompile Include="Section02\TemplateFriend\template_friend2.cpp" />
+    <ClCompile Include="Section02\TemplateFriend\template_friend3.cpp" />
+    <ClCompile Include="Section02\TemplateFriend\template_friend4.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Section01\TemplateBasic\Lib.h" />
