--- a/CPPTemplate/CPPTemplate.vcxproj
+++ b/CPPTemplate/CPPTemplate.vcxproj
@@ -190,6 +190,11 @@
     <ClCompile Include="Section04\IntegralConstant\integral_constant2.cpp" />
     <ClCompile Include="Section04\IntegralConstant\use_int2type.cpp" />
     <ClCompile Include="Section04\IntegralConstant\use_int2type2.cpp" />
+    <ClCompile Include="Section04\TypeModification\remove_allpointer.cpp" />
+    <ClCompile Include="Section04\TypeModification\remove_allpointer2.cpp" />
+    <ClCompile Include="Section04\TypeModification\solve_paramter_type.cpp" />
+    <ClCompile Include="Section04\TypeModification\type_modify1.cpp" />
+    <ClCompile Include="Section04\TypeModification\type_modify_intro.cpp" />
     <ClCompile Include="Section04\TypeTraits\is_array.cpp" />
     <ClCompile Include="Section04\TypeTraits\is_array2.cpp" />
     <ClCompile Include="Section04\TypeTraits\type_trait1.cpp" />
