tuple 을 사용해서 pack으로 어떤 테크닉이 가능한지 실습

--- a/CPPTemplate/CPPTemplate.vcxproj
+++ b/CPPTemplate/CPPTemplate.vcxproj
@@ -204,6 +204,21 @@
     <ClCompile Include="Section04\TypeTraits\is_array2.cpp" />
     <ClCompile Include="Section04\TypeTraits\type_trait1.cpp" />
     <ClCompile Include="Section04\TypeTraits\type_trait2.cpp" />
+    <ClCompile Include="Section05\UseVariadicTemplate2\get1.cpp" />
+    <ClCompile Include="Section05\UseVariadicTemplate2\get2.cpp" />
+    <ClCompile Include="Section05\UseVariadicTemplate2\get3.cpp" />
+    <ClCompile Include="Section05\UseVariadicTemplate2\get4.cpp" />
+    <ClCompile Include="Section05\UseVariadicTemplate2\get5.cpp" />
+    <ClCompile Include="Section05\UseVariadicTemplate2\print_tuple.cpp" />
+    <ClCompile Include="Section05\UseVariadicTemplate2\print_tuple2.cpp" />
+    <ClCompile Include="Section05\UseVariadicTemplate\solve_parameter_type.cpp" />
+    <ClCompile Include="Section05\UseVariadicTemplate\solve_parameter_type2.cpp" />
+    <ClCompile Include="Section05\UseVariadicTemplate\solve_return_type.cpp" />
+    <ClCompile Include="Section05\UseVariadicTemplate\solve_return_type2.cpp" />
+    <ClCompile Include="Section05\UseVariadicTemplate\tuple1.cpp" />
+    <ClCompile Include="Section05\UseVariadicTemplate\tuple2.cpp" />
+    <ClCompile Include="Section05\UseVariadicTemplate\tuple3.cpp" />
+    <ClCompile Include="Section05\UseVariadicTemplate\tuple4.cpp" />
     <ClCompile Include="Section05\VariadicTemplate2\fold_expression.cpp" />
     <ClCompile Include="Section05\VariadicTemplate2\fold_expression2.cpp" />
     <ClCompile Include="Section05\VariadicTemplate2\fold_expression3.cpp" />
