메모리를 허투로 낭비하지 않기위해 모바일 장비등에서 thin template 기법을 사용한다

--- a/CPPTemplate/CPPTemplate.vcxproj
+++ b/CPPTemplate/CPPTemplate.vcxproj
@@ -230,6 +230,9 @@
     <ClCompile Include="Section05\VariadicTemplate\pack_expansion4.cpp" />
     <ClCompile Include="Section05\VariadicTemplate\parameter_pack.cpp" />
     <ClCompile Include="Section05\VariadicTemplate\variadic_template1.cpp" />
+    <ClCompile Include="Section06\ThinTemplate\thin_template.cpp" />
+    <ClCompile Include="Section06\ThinTemplate\thin_template2.cpp" />
+    <ClCompile Include="Section06\ThinTemplate\thin_template3.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Section01\TemplateBasic\Lib.h" />
