--- a/CPPTemplate/CPPTemplate.vcxproj
+++ b/CPPTemplate/CPPTemplate.vcxproj
@@ -230,6 +230,10 @@
     <ClCompile Include="Section05\VariadicTemplate\pack_expansion4.cpp" />
     <ClCompile Include="Section05\VariadicTemplate\parameter_pack.cpp" />
     <ClCompile Include="Section05\VariadicTemplate\variadic_template1.cpp" />
+    <ClCompile Include="Section06\CRTP\crtp.cpp" />
+    <ClCompile Include="Section06\CRTP\crtp2.cpp" />
+    <ClCompile Include="Section06\CRTP\use_crtp.cpp" />
+    <ClCompile Include="Section06\CRTP\use_crtp2.cpp" />
     <ClCompile Include="Section06\ThinTemplate\thin_template.cpp" />
     <ClCompile Include="Section06\ThinTemplate\thin_template2.cpp" />
     <ClCompile Include="Section06\ThinTemplate\thin_template3.cpp" />
