--- a/CPPTemplate/CPPTemplate.vcxproj
+++ b/CPPTemplate/CPPTemplate.vcxproj
@@ -234,6 +234,10 @@
     <ClCompile Include="Section06\CRTP\crtp2.cpp" />
     <ClCompile Include="Section06\CRTP\use_crtp.cpp" />
     <ClCompile Include="Section06\CRTP\use_crtp2.cpp" />
+    <ClCompile Include="Section06\PolicyBasedDesign\policy_based_design.cpp" />
+    <ClCompile Include="Section06\PolicyBasedDesign\policy_based_design2.cpp" />
+    <ClCompile Include="Section06\PolicyBasedDesign\use_in_vector.cpp" />
+    <ClCompile Include="Section06\PolicyBasedDesign\use_in_vector2.cpp" />
     <ClCompile Include="Section06\ThinTemplate\thin_template.cpp" />
     <ClCompile Include="Section06\ThinTemplate\thin_template2.cpp" />
     <ClCompile Include="Section06\ThinTemplate\thin_template3.cpp" />
