Concept 은 아직 VisualStudio 에서 제대로 작동하지 않는데 g++ 정도만 지원하고 있다.

--- a/CPPTemplate/CPPTemplate.vcxproj
+++ b/CPPTemplate/CPPTemplate.vcxproj
@@ -262,6 +262,8 @@
     <ClCompile Include="Section06\Typelist\typelist5.cpp" />
     <ClCompile Include="Section06\Typelist\typelist6.cpp" />
     <ClCompile Include="Section06\Typelist\typelist7.cpp" />
+    <ClCompile Include="Section06\Typelist\typelist8.cpp" />
+    <ClCompile Include="Section07\concept.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Section01\TemplateBasic\Lib.h" />
