--- a/CPPSTL/CPPSTL.vcxproj
+++ b/CPPSTL/CPPSTL.vcxproj
@@ -139,6 +139,7 @@
     <ClCompile Include="Iterator\IteratorCategory\iterator_category3.cpp" />
     <ClCompile Include="Iterator\IteratorCategory\iterator_category4.cpp" />
     <ClCompile Include="Iterator\IteratorCategory\iterator_category5.cpp" />
+    <ClCompile Include="Iterator\IteratorCategory\member_type.cpp" />
     <ClCompile Include="Iterator\IteratorCategory\tag_dispatching1.cpp" />
     <ClCompile Include="Iterator\IteratorCategory\tag_dispatching2.cpp" />
     <ClCompile Include="Iterator\IteratorCategory\tag_dispatching3.cpp" />
